--- a/src/content/docs/generals/mayors.mdx
+++ b/src/content/docs/generals/mayors.mdx
@@ -54,7 +54,7 @@ list and everyone else use the 3 Orange list. Further note, generals marked
 with a 'Y' in the 'Availability' column are the only ones available without
 getting lucky in paid events.
 
-<Mayors generalClass='Mayor' ></Mayors>
+<Mayors generalClass='Mayor'></Mayors>
 
 ## Reducing the Enemy's Ability to Survive Your Attack
 
@@ -69,7 +69,7 @@ list and everyone else use the 3 Orange list. Further note, generals marked
 with a 'Y' in the 'Availability' column are the only ones available without
 getting lucky in paid events.
 
-<Mayors generalClass='Mayor' ></Mayors>
+Mayors generalClass='Mayor'
 
 ## Trying to find balance
 
@@ -87,6 +87,6 @@ because another use for this list is as a tie breaker: if you are debating
 between two generals in one of the other lists, knowing where they fall here
 can help make the decision.
 
-<Mayors generalClass='Mayor' ></Mayors>
+Mayors generalClass='Mayor'
 
 [Overview]: ../overview
