--- a/src/content/docs/generals/pair-picking/Archers.mdx
+++ b/src/content/docs/generals/pair-picking/Archers.mdx
@@ -25,6 +25,6 @@ Unfortunately, the generals that are good at the attacking use case are at best 
 
 ## Reinforcing Pairs
 
-<AttackPairs generalClass="Archers" useCase="Reinforcement"></AttackPairs>
+AttackPairs generalClass="Archers" useCase="Reinforcement"
 
 import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
