serve pairing from tools

--- a/src/content/tools/pair-picking/Archers.mdx
+++ b/src/content/tools/pair-picking/Archers.mdx
@@ -27,4 +27,4 @@ Unfortunately, the generals that are good at the attacking use case are at best 
 
 AttackPairs generalClass="Archers" useCase="Reinforcement"
 
-import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
+import AttackPairs from '../../../components/general/pairing/AttackPairs.astro';
