--- a/src/content/tools/pair-picking/Ground.mdx
+++ b/src/content/tools/pair-picking/Ground.mdx
@@ -28,4 +28,4 @@ Unfortunately, the generals that are good at the attacking use case are at best 
 <AttackPairs generalClass="Ground" useCase="Reinforcement"></AttackPairs>
 
 
-import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
+import AttackPairs from '../../../components/general/pairing/AttackPairs.astro';
