--- a/src/content/tools/pair-picking/Monsters.mdx
+++ b/src/content/tools/pair-picking/Monsters.mdx
@@ -60,7 +60,7 @@ As you look at this, there are a few key things to consider.
   will hopefully eventually be addressed. I may even remember to update this
   note when I do so. _**This is important.**_ A general pair A with no skill books might show as weaker than another pair B, but if pair A has no conflicts and pair B does, the difference these skill books make will _sometimes_ tip the balance in favor of pair A.
 
-import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
+import AttackPairs from '../../../components/general/pairing/AttackPairs.astro';
 
 [explanation]: ./#explanation
 [Martinus]: ../../details/martinus/
