--- a/src/content/tools/pair-picking/Mounted.mdx
+++ b/src/content/tools/pair-picking/Mounted.mdx
@@ -29,6 +29,6 @@ Similarly, while you can _usually_ use generals that are good for the mounted at
 
 <AttackPairs generalClass="Mounted" useCase="Reinforcement"></AttackPairs>
 
-import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
+import AttackPairs from '../../../components/general/pairing/AttackPairs.astro';
 
 [Monster Hunting]: ../monster_hunters/
