--- a/src/content/tools/pair-picking/Siege.mdx
+++ b/src/content/tools/pair-picking/Siege.mdx
@@ -36,6 +36,6 @@ anyway.
 <AttackPairs generalClass="Siege" useCase="Reinforcement"></AttackPairs>
 /
 
-import AttackPairs from '../../../../components/general/pairing/AttackPairs.astro';
+import AttackPairs from '../../../components/general/pairing/AttackPairs.astro';
 
 [RSS]: ../../../reference/glossary/#rss
