--- a/src/content/tools/pair-picking/index.mdx
+++ b/src/content/tools/pair-picking/index.mdx
@@ -1,13 +1,11 @@
 ---
-slug: generals/pair-picking
+slug: pair-picking
 title: Evaluating Relative Strength of Pairs
 authors: Luke Schierer
 tableOfContents: false
 sidebar:
   order: 1
 ---
-
-import CollapsibleSection from '../../../../components/CollapsibleSection.astro';
 
 Most sites offering ratings of generals have flaws. While I personally have really appreciated the work done
 on [EvonyAnswers], I find that even it falls down when I do not want, or cannot afford, to split my
