--- a/src/EvonyPerl/Changes
+++ b/src/EvonyPerl/Changes
@@ -1,4 +1,4 @@
-Revision history for EvonyPerl
+Revision history for Game::Evony
 
 0.01    Date/time
         First version, released on an unsuspecting world.
