--- a/src/EvonyPerl/README
+++ b/src/EvonyPerl/README
@@ -1,4 +1,4 @@
-EvonyPerl
+Game::Evony
 
 The README is used to introduce the module and provide instructions on
 how to install the module, any machine dependencies it may have (for
@@ -26,25 +26,53 @@ SUPPORT AND DOCUMENTATION
 After installing, you can find documentation for this module with the
 perldoc command.
 
-    perldoc General
+    perldoc Game::Evony::General
 
 You can also look for information at:
 
     RT, CPAN's request tracker (report bugs here)
-        https://rt.cpan.org/NoAuth/Bugs.html?Dist=EvonyPerl
+        https://rt.cpan.org/NoAuth/Bugs.html?Dist=Game::Evony
 
     CPAN Ratings
-        https://cpanratings.perl.org/d/EvonyPerl
+        https://cpanratings.perl.org/d/Game::Evony
 
     Search CPAN
-        https://metacpan.org/release/EvonyPerl
+        https://metacpan.org/release/Game::Evony
 
 
 LICENSE AND COPYRIGHT
 
-This software is Copyright (c) 2024 by  Luke Schierer.
+This work, created by  Luke Schierer, is licensed under a
+Creative Commons Attribution-NonCommercial 4.0 International License.
 
-This program is released under the following license:
+You are free to:
 
-  CC_BY_4_0
+   * Share -- copy and redistribute the material in any medium or format
+
+   * Adapt -- remix, transform, and build upon the material
+
+   * The licensor cannot revoke these freedoms as long as you follow the
+     license terms.
+
+Under the following terms:
+
+   * Attribution -- You must give appropriate credit, provide a link to the
+     license, and indicate if changes were made. You may do so in any
+     reasonable manner, but not in any way that suggests the licensor
+     endorses you or your use.
+
+   * No additional restrictions -- You may not apply legal terms or
+     technological measures that legally restrict others from doing
+     anything the license permits.
+
+Notices:
+
+   * You do not have to comply with the license for elements of the
+     material in the public domain or where your use is permitted by an
+     applicable exception or limitation.
+
+   * No warranties are given. The license may not give you all of the
+     permissions necessary for your intended use. For example, other rights
+     such as publicity, privacy, or moral rights may limit how you use the
+     material.
 
