feat: perl scaffoloding
this version builds, though it does not actually include everything correctly yet

--- a/src/EvonyPerl/Changes
+++ b/src/EvonyPerl/Changes
@@ -1,5 +1,3 @@
-Revision history for Game::Evony
+Revision history for {{$dist->name}}
 
-0.01    Date/time
-        First version, released on an unsuspecting world.
-
+{{$NEXT}}
